--- a/sudoku.cabal
+++ b/sudoku.cabal
@@ -19,10 +19,13 @@ executable sudoku
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.9 && <4.10,
+  build-depends:       base,
                        classy-prelude,
                        array,
-                       lens
+                       lens,
+                       mtl,
+                       transformers,
+                       mono-traversable
 
   -- hs-source-dirs:      
   default-language:    Haskell2010
